[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/entity_meshes/builder_bunny.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/BunnyBuilder.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/Spring_Bun_Appear.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/Spring_Bun_Move.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/Spring_Bun_Build.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/Spring_BGM_Ambiance.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/Spring_BGM_Overlay.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/Spring_Victory_Quicky.ogg" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Build"
length = 0.85
loop = true
tracks/0/type = "animation"
tracks/0/path = NodePath("builder_bunny/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "Build" ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "animation"
tracks/0/path = NodePath("builder_bunny/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "BuildStart" ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_build_start_animation_end"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
tracks/0/type = "animation"
tracks/0/path = NodePath("builder_bunny/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "Idle" ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
length = 0.85
loop = true
tracks/0/type = "animation"
tracks/0/path = NodePath("builder_bunny/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "Run" ),
"times": PoolRealArray( 0 )
}

[node name="BunnyBuilder" type="Spatial"]
script = ExtResource( 2 )

[node name="builder_bunny" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.1, 0, -3.25841e-08, 0, 0.1, 0, 3.25841e-08, 0, -0.1, -0.175352, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/Build = SubResource( 1 )
anims/BuildStart = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Run = SubResource( 4 )

[node name="BuildTimer" type="Timer" parent="."]

[node name="ReRequestTimer" type="Timer" parent="."]

[node name="WakeUpTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="BunnyRunningLoop" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_db = 15.0

[node name="AppearanceSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = 10.0

[node name="AppearanceSoundTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="BuildingSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_db = 8.0

[node name="AmbientBackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -22.0

[node name="OverlayBackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -12.0

[node name="VictoryTune" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -12.0
[connection signal="timeout" from="BuildTimer" to="." method="_on_BuildTimer_timeout"]
[connection signal="timeout" from="ReRequestTimer" to="." method="_on_ReRequestTimer_timeout"]
[connection signal="timeout" from="WakeUpTimer" to="." method="_on_WakeUpTimer_timeout"]
[connection signal="timeout" from="AppearanceSoundTimer" to="." method="_on_AppearanceSoundTimer_timeout"]

[editable path="builder_bunny"]
